# llm-token-dashboard

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: deploy-pages.yml  docker-publish.yml
src/: main.rs  models.rs
src/pages/: home.rs  info.rs  mod.rs  model_price_list.rs
src/utils/: mod.rs  pricing.rs  tokens.rs
