[package]
name = "llm-token-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.12", features = ["csr"] }
leptos-use = "0.16.3"
leptos_router = "0.8.9"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thaw = { version = "0.5.0-beta", features = ["csr"] }
tiktoken-rs = "0.7.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Window"] }
